@@ -1,3 +1,10 @@
+Wed May 20 07:26:43 UTC 2009  Marcel Smit  <msmit@remedy.nl>
+
+        * TAO_IDL/be/be_interface.cpp
+        * TAO_IDL/util/utl_global.cpp
+          
+          Fixed compiler errors on CE gcc on Cygwin.
+
 Tue May 19 12:12:00 UTC 2009  Simon Massey  <sma at prismtech dot com>
 
         * tao/Invocation_Base.h:
